--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-webflux-ui</artifactId>
+			<version>1.6.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
